tests/cases/compiler-development/artifact/errors/diagnostic-private-enum-case.diagnostic
diagnostic error code=M0001 family=module message="enum case 'Hidden::A' is not public" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/modules/errors/private-module-enum-case.ari" display="tests/cases/modules/errors/private-module-enum-case.ari" bytes=202
  Label index=0 role=primary source_id=0 source="tests/cases/modules/errors/private-module-enum-case.ari" line=14 column=5 end_line=14 end_column=11 byte_start=159 byte_end=165 message=""
  Snippet label=0 text="  --> tests/cases/modules/errors/private-module-enum-case.ari:14:5\n    |\n 14 |     Hidden::A => {\n    |     ^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/modules/errors/private-module-enum-case.ari" line=3 column=5 end_line=3 end_column=6 byte_start=33 byte_end=34 message="private enum case 'Hidden::A' declared here"
  Snippet label=1 text="  --> tests/cases/modules/errors/private-module-enum-case.ari:3:5\n   |\n 3 |     A,\n   |     ^"
  Note index=0 location=none message="module visibility is enforced at the use site and the private declaration is shown as a secondary label"
  Help index=0 location=none message="mark enum case 'Hidden::A' as pub or access it from inside module 'Hidden'"
